<resources>
    <string name="app_name">Dispo-deportes SR</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="court_number">Cancha N° </string>
    <string name="my_profile">Mi Perfil</string>
    <string name="mode_holidays">Modo Vacaciones</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="text_mode_holidays">Se encuentra en Modo vacaciones</string>
    <string name="second_text_mode_holidays">Si desea desactivarlo diríjase a perfil</string>
    <string name="title_block_court">Bloqueo de canchas</string>
    <string name="titile_info_place">Información del complejo</string>
    <string name="description">Descripción</string>
    <string name="address">Dirección</string>
    <string name="phone_number">Número de celular</string>
    <string name="save">Guardar</string>
    <string name="text_place_holidays">El complejo está de vacaciones</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="log_in">INICIAR SESIÓN</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="text_not_count">¿No tienes cuenta?</string>
    <string name="text_register">REGÍSTRATE</string>
    <string name="text_select_sport">Seleccione el deporte</string>
    <string name="text_fail_connection">Sin Conexión</string>
    <string name="topbar_place">Complejos</string>
    <string name="title_register">Registro</string>
    <string name="placeholder_name">Nombre</string>
    <string name="placeholder_confirm_pass">Confirmar Contraseña</string>
    <string name="btn_send_register">Registrarme</string>
    <string name="request_shift">Solicitar turno</string>
    <string name="btn_reserve">Reservar</string>
    <string name="text_user_sanctioned">USUARIO SANCIONADO</string>
    <string name="topbar_add_new_courts">Agregar nuevas canchas</string>
    <string name="title_add_new_courts">¿Cuantas canchas desea agregar?</string>
    <string name="add">Agregar</string>
    <string name="btn_search">Buscar</string>
    <string name="topbar_courts">Canchas</string>
    <string name="topbar_search_for_date">Busqueda por fecha</string>
    <string name="placeholder_select_date">Selecione la fecha</string>
    <string name="placeholder_format_date">Año-Mes-Dia</string>
    <string name="topbar_search_for_hour">Busqueda por hora</string>
    <string name="search_for_hour">Buscar por hora</string>
    <string name="search_for_date">Buscar por fecha</string>
    <string name="topbar_searches">Búsquedas</string>
    <string name="topbar_your_shifts">Mis turnos</string>
    <string name="tobar_shifts_requested">Turnos Solicitados</string>
    <string name="title_opportunity_reserve">¿Desea reservar el turno?</string>
    <string name="option_yes">SI</string>
    <string name="option_no">NO</string>
    <string name="topbar_user_sancioned">Sancionados</string>
    <string name="topbar_your_shifts_waitlist">Turnos en espera</string>
    <string name="text_msg_bloqued_court">La cancha se encuentra bloqueada</string>
    <string name="text_number_court">Cancha N° "</string>
    <string name="text_status">Estado: </string>
    <string name="text_hour">Hora: </string>
    <string name="hs"> hs.</string>
    <string name="a"> a </string>
    <string name="name_adapter">Nombre: </string>
    <string name="email_adapter">Email: </string>
    <string name="date_adapter">Fecha: </string>
    <string name="place_adapter">Complejo: </string>
    <string name="text_day_sanctioned">Fué sancionado el día: </string>
    <string name="text_day_free">Día de liberación: </string>
    <string name="fail_connection_api">Error al comunicarse con el servidor</string>
    <string name="place_in_process">Todavía no hay complejos adheridos.</string>
    <string name="shift_busy">Turnos solicitados</string>
    <string name="email_error">El correo debe contener un "@"</string>


</resources>