<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginForm"
    android:background="@color/secondaryLightColor"
    tools:context=".ReserveByAdminActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/ColorPrimaryDark"
        app:title="Complejos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/request_shift"
            android:textColor="@color/primaryTextColor"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            android:hint="@string/placeholder_name"
            android:textColorHint="@android:color/background_dark"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reserve"
            android:onClick="reserveTurn"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>