<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginForm"
    tools:context=".SelectDateActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/ColorPrimaryDark"
        app:title="@string/topbar_search_for_date"
        app:menu="@menu/menu_options"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSendSelected"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativecard">

            <Button
                android:id="@+id/buttonDateSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/placeholder_select_date"
                android:drawableLeft="@drawable/ic_baseline_date_white"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/TextViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_format_date"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/buttonSendSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/btn_search"
        android:layout_above="@+id/bottomNavigation"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:onClick="searchForDate"
        android:layout_centerVertical="true"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"

        android:layout_alignParentBottom="true"/>


</RelativeLayout>