<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCantCourtsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/ColorPrimaryDark"
        app:title="@string/topbar_add_new_courts"
        app:menu="@menu/menu_options"/>

    <LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        tools:context=".SelectHourActivity">

        <TextView
            android:id="@+id/titleSelectCourt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/title_add_new_courts"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginBottom="40dp"
            android:textSize="22sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_list_number"
            android:hint="Número de canchas"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:id="@+id/cantCourtsSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:paddingBottom="20dp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/buttonSendSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"
                android:onClick="AddNewCourt"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_admin"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>