<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAdminActivity"
    android:background="@color/ColorPrimaryDark">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/profileTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:drawableTop="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hola"
                android:textColor="@android:color/black"
                android:textSize="30dp"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableTop="@drawable/ic_baseline_email_24"
                android:paddingTop="2dp" />
            <TextView
                android:id="@+id/profileMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_below="@+id/profileName"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:text="@string/change_password"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewLogin"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishSession"
        android:layout_width="match_parent"
        android:text="@string/log_out"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNavigation"
        android:onClick="finishSession"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>